apigee-istio-demo-inventory/config/inventory.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory
  labels:
    app: inventory
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: inventory
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: inventory-v1
  labels:
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: inventory
        version: v1
    spec:
      containers:
      - name: inventory
        image: gcr.io/industrial-balm-193822/inventory:v1
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent #Always
        ports:
        - containerPort: 5000
